// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input props: getTheme: width:100,margin:10, 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
      "marginBottom": "1rem",
      "marginLeft": "1rem",
      "marginRight": "1rem",
      "marginTop": "1rem",
      "width": "10rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="default"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1.2rem",
      }
    }
  />
</div>
`;

exports[`Input props: null 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="default"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1.2rem",
      }
    }
  />
</div>
`;

exports[`Input props: placeholder  1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    placeholder="请填写内容"
    size="default"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1.2rem",
      }
    }
  />
</div>
`;

exports[`Input props: placeholder  2`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    placeholder=""
    size="default"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1.2rem",
      }
    }
  />
</div>
`;

exports[`Input props: size 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "2.4rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="small"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.2rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1rem",
      }
    }
  />
</div>
`;

exports[`Input props: size 2`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c1 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "4rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="large"
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "1rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <i
    className="lugia-icon-reminder_close   c2"
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "color": "#9EA4AE",
        "fontSize": "1.2rem",
      }
    }
  />
</div>
`;
